<resources>
    <string name="application_name">3DS2 Validation</string>
    <string name="sdk_test">3DS SDK test</string>
    <string name="card_number">Card Number</string>
    <string name="email_address">Email Address</string>
    <string name="cardholder_email">cardholder@gmail.com</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="amount">Amount</string>
    <string name="pay">Pay</string>

    <string-array name="currencies">
        <item>UAH</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>

</resources>
